# Frost-Days

./: .gitignore  PRESENTATION.md  README.md  main.py  pyproject.toml
.streamlit/: config.toml
app/: streamlit_app.py
frost_days/: __init__.py  cli.py  communes.py  config.py  datagouv.py  frost.py  stations.py  weather.py
notebooks/: exploration.ipynb
scripts/: generate_complete_validation.py  generate_validation.py  validate.py
tests/: test_frost.py  test_stations.py
validation/: Asnières-sur-Saône_01_complete.csv  Digne-les-Bains_04_complete.csv  Espinchal_63_complete.csv  Marseille_13_complete.csv  Montfalcon_38_complete.csv  Paris_75_complete.csv  city_df_complete.csv  stations_df_complete.csv
