[project]
name = "frost-days"
version = "0.1.0"
description = "Calcul du nombre de jours de gel par commune à partir des données climatologiques Météo-France (data.gouv.fr)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "scipy>=1.10",
    "requests>=2.31",
    "streamlit>=1.30",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
    "matplotlib>=3.7",
]

[project.scripts]
frost-days = "frost_days.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["frost_days"]

[tool.pytest.ini_options]
testpaths = ["tests"]
